examples/v0.6/errors/while_condition_not_boolean.nova
while 10 {

}

// Expected: Condition must evaluate to a Boolean value.